* Fixed content match check which reported only first   match during the same cycle. Thanks to Pavel Shevaev for   report.
git-svn-id: http://monit.googlecode.com/svn/trunk@7 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,10 @@ BUGFIXES:
   report ESMTP protocol failure. Thanks to Axel Reinhold for
   report.
 
+* Fixed content match check which reported only first
+  match during the same cycle. Thanks to Pavel Shevaev for
+  report.
+
 
 Version 5.0.3
 
