support multiline FTP greeting
git-svn-id: http://monit.googlecode.com/svn/trunk@12 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,9 @@ BUGFIXES:
   match during the same cycle. Thanks to Pavel Shevaev for
   report.
 
+* Added support for multiline greetings to FTP protocol test.
+  Thanks to Giovanni D'Cristina for report.
+
 
 Version 5.0.3
 
