add gps protocol test
git-svn-id: http://monit.googlecode.com/svn/trunk@14 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-                     CHANGES version 5.0.4
+                     CHANGES version 5.1
                                 
            This file summarizes changes made since 3.0
                                 
@@ -7,7 +7,11 @@
           https://savannah.nongnu.org/bugs/?group=monit
 
 
-Version 5.0.4
+Version 5.1
+
+NEW FEATURES AND FUNCTIONS:
+
+* Added GPS protocol test. Thanks to Sebastien Debrard for patch.
 
 BUGFIXES:
 
