* Allow for the use of complete SSL certificate chains.   Thanks to Lawrence Tan for patch.
git-svn-id: http://monit.googlecode.com/svn/trunk@17 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -22,6 +22,9 @@ BUGFIXES:
 * Fixed content match check which reported only first
   match during the same cycle. Thanks to Pavel Shevaev for
   report.
+  
+* Allow for the use of complete SSL certificate chains. 
+  Thanks to Lawrence Tan for patch.
 
 * Added support for multiline greetings to FTP protocol test.
   Thanks to Giovanni D'Cristina for report.
