* Fix Debian Bug #541139: uses gethostbyname() and thus does   not work with "options inet6" in /etc/resolv.conf. Thanks to   Michael Stapelberg for patch.
git-svn-id: http://monit.googlecode.com/svn/trunk@19 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -29,6 +29,10 @@ BUGFIXES:
 * Added support for multiline greetings to FTP protocol test.
   Thanks to Giovanni D'Cristina for report.
 
+* Fix Debian Bug #541139: uses gethostbyname() and thus does
+  not work with "options inet6" in /etc/resolv.conf. Thanks to
+  Michael Stapelberg for patch.
+
 
 Version 5.0.3
 
