--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -13,6 +13,13 @@ NEW FEATURES AND FUNCTIONS:
 
 * Added GPS protocol test. Thanks to Sebastien Debrard for patch.
 
+* Added RADIUS protocol test. Thanks to Alan DeKok for patch. Example syntax:
+    check process radiusd with pidfile /var/run/radiusd.pid
+       start program = "/etc/init.d/freeradius start"
+       stop program = "/etc/init.d/freeradius stop"
+       if failed host 127.0.0.1 port 2000 type udp protocol radius secret testing1234 then alert
+       if 5 restarts within 5 cycles then timeout
+
 BUGFIXES:
 
 * Fixed SMTP protocol test which may sometimes incorrectly
