fix passive monitoring mode
git-svn-id: http://monit.googlecode.com/svn/trunk@42 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -55,6 +55,8 @@ BUGFIXES:
 * Do not require SSL version type when setting SSL check and setting mmonit
   (SSL version is set to auto).
 
+* Passive monitoring mode fixed. Thanks to Nelson Vale for report.
+
 
 Version 5.0.3
 
