[bug #27784] wait_start/wait_stop in control.c can advance too quickly
git-svn-id: http://monit.googlecode.com/svn/trunk@43 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -57,6 +57,9 @@ BUGFIXES:
 
 * Passive monitoring mode fixed. Thanks to Nelson Vale for report.
 
+* Fixed #27784: wait_start/wait_stop can advance too quickly.
+  Thanks for report to Randy Puro.
+
 
 Version 5.0.3
 
