fix fogbugz #15 (mmonit - GCC 4.0.3 on Solaris 10)
git-svn-id: http://monit.googlecode.com/svn/trunk@44 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,10 @@ BUGFIXES:
 * Fixed #27784: wait_start/wait_stop can advance too quickly.
   Thanks for report to Randy Puro.
 
+* Allow to monitor process' cpu and memory usage on Solaris even
+  when Monit is not running as root and fix when compiled with
+  optimizations enabled.
+
 
 Version 5.0.3
 
