[bug #26752] Monit fails to detect children, and gets host memory wrong inside Solaris Zones
Inside Solaris Zones, FreeBSD jails, etc. there can be pid 1 missing. We can detect root process
by checking for process which has PID equal to PPID (parent of itself). This shows correct root process
both in parent OS instance and zones/jails.



git-svn-id: http://monit.googlecode.com/svn/trunk@45 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -64,6 +64,9 @@ BUGFIXES:
   when Monit is not running as root and fix when compiled with
   optimizations enabled.
 
+* Fix #26752: inside Solaris Zone Monit fails to detect children
+  and gets host memory wrong
+
 
 Version 5.0.3
 
