return error when cli failed for some reason and also report error returned by monit when action was requested but scheduling failed (for example service doesn't exist or user has no access privileges)
git-svn-id: http://monit.googlecode.com/svn/trunk@48 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,11 @@ NEW FEATURES AND FUNCTIONS:
 
 BUGFIXES:
 
+* When error occurred during monit command-line execution, report error
+  and exit with 1, so it is possible to react when monit is used in script.
+  On success 0 is returned as usual. Formerly command-line monit exited
+  always 0 even if error occurred.
+
 * Fixed SMTP protocol test which may sometimes incorrectly
   report ESMTP protocol failure. Thanks to Axel Reinhold for
   report.
