--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -34,7 +34,7 @@ BUGFIXES:
 * Fix #26752: inside Solaris Zone Monit fails to detect children
   and gets host memory wrong
 
-* On Solaris, FreeBSD and OpenBSD Monit no longer needs to run as root user
+* On Solaris, FreeBSD, NetBSD and OpenBSD Monit no longer needs to run as root user
   in order to be able to watch process resource usage (cpu and memory).
 
 * When error occurred during Monit command-line execution, report error
