Don't wait on service lock when presenting data in http interface. Since the http interface doesn't perform the actions itself but just schedules the action via flag, we don't need to wait for the lock (otherwise the http thread can block for long time for example if slow service restart is pending before the lock is released and http can continue).
git-svn-id: http://monit.googlecode.com/svn/trunk@65 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -39,6 +39,8 @@ NEW FEATURES AND FUNCTIONS:
 * Do not require SSL version type when setting SSL check and setting M/Monit
   (SSL version is set to auto).
 
+* Don't block http interface if service is being checked or action performed
+
 BUGFIXES:
 
 * Support resource monitoring (cpu usage, etc.) when Monit is running
