report more details when monit http failed to start ... based on following problem:
===
Wow, replaced the domain name with the IP address and it came back up! Seems the box is having DNS issues at the moment.

Thank you very much for your help! I never would have been able to track that down from the error message "http server: Could not create a server socket at port 2812 -- No such file or directory"
===



git-svn-id: http://monit.googlecode.com/svn/trunk@66 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -41,6 +41,9 @@ NEW FEATURES AND FUNCTIONS:
 
 * Don't block http interface if service is being checked or action performed
 
+* In case that Monit http interface failed to start, provide more details about
+  the reason.
+
 BUGFIXES:
 
 * Support resource monitoring (cpu usage, etc.) when Monit is running
