--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,7 +16,8 @@ NEW FEATURES AND FUNCTIONS:
       if 3 restarts within 5 cycles then exec "/foo/bar"
       if 8 restarts within 10 cycles then unmonitor
 
-* Service can be added to multiple groups. Syntax:
+* Service can be added to multiple groups. Thanks to Brad Gessler
+  for suggestion. Syntax:
     check filesystem wwwdata with path /www
       group www
       group filesystem
