1.) multiple servicegroups per service support
2.) Fixed #28369: escape XML properly



git-svn-id: http://monit.googlecode.com/svn/trunk@99 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -95,6 +95,8 @@ BUGFIXES:
 
 * Solaris resource usage fix when Monit was compiled with optimizations enabled.
 
+* Fixed #28369: escape XML properly
+
 
 Version 5.0.3
 
