- language: optionaly -> optionally
- check service name uniqueness when 'check system' is missing in monitrc and virtual system service with name set to local hostname is added




git-svn-id: http://monit.googlecode.com/svn/trunk@109 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -97,6 +97,10 @@ BUGFIXES:
 
 * Fixed #28369: escape XML properly
 
+* Check service name uniqueness when 'check system' is missing in monitrc and virtual
+  system service with name set to local hostname is added. Thanks to Marcus Muelbuesch
+  for report.
+
 
 Version 5.0.3
 
