--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -64,6 +64,9 @@ BUGFIXES:
 * On Solaris, FreeBSD, NetBSD and OpenBSD Monit no longer needs to run as root user
   in order to be able to watch process resource usage (cpu and memory).
 
+* Send heartbeat to M/Monit even if Monit is busy in long testing cycle to prevent
+  false alerts about non-responsive Monit.
+
 * Fixed SMTP protocol test which may sometimes incorrectly
   report ESMTP protocol failure. Thanks to Axel Reinhold for
   report.
