fix hostheader option (mea culpa - i didn't tested contributed patch before integration, code looked good to me, lex token was erroneously lower-case however)
git-svn-id: http://monit.googlecode.com/svn/trunk@129 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-                     CHANGES version 5.2
+                     CHANGES version 5.1.1
                                 
            This file summarizes changes made since 3.0
                                 
@@ -7,11 +7,14 @@
           https://savannah.nongnu.org/bugs/?group=monit
 
 
-Version 5.2
+Version 5.1.1
 
 BUGFIXES:
 
 * Fix FTP protocol test. Thanks to Axel Reinhold for report.
+
+* Fix the HTTP protocol test's hostheader option which was added in 5.1.
+  Thanks to Naoya Nakazawa for report.
 
 
 Version 5.1
