remove non-sense verbose warning (missing system service check is not error and it shouldn't be reported as such)
git-svn-id: http://monit.googlecode.com/svn/trunk@130 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -16,6 +16,8 @@ BUGFIXES:
 * Fix the HTTP protocol test's hostheader option which was added in 5.1.
   Thanks to Naoya Nakazawa for report.
 
+* Removed warning about missing system service check.
+
 
 Version 5.1
 
