fix manual page formating
git-svn-id: http://monit.googlecode.com/svn/trunk@133 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -19,6 +19,8 @@ BUGFIXES:
 * Removed warning about missing system service check. Missing system service
   check is not error and it shouldn't be reported as such.
 
+* Fix manual page formating. Thanks to Stefan Alfredsson for report.
+
 
 Version 5.1
 
