--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,15 @@
-                     CHANGES version 5.1.1
+                     CHANGES version 5.1.2
                                 
            This file summarizes changes made since 3.0
                                 
        Bug fixes may refer to an auto-generated id in our
           bug-tracking system, which can be found here
           https://savannah.nongnu.org/bugs/?group=monit
+
+
+Version 5.1.2
+
+BUGFIXES:
 
 
 Version 5.1.1
