fix linux process uptime
git-svn-id: http://monit.googlecode.com/svn/trunk@140 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,11 @@ Version 5.1.2
 
 BUGFIXES:
 
+* Show real process uptime - formerly the presented uptime was
+  based on create timestamp of process' pidfile which provides invalid
+  uptime if the pidfile is replaced. This does for example apache when
+  it is reloaded. Thanks to Nima Chavooshi for report.
+
 
 Version 5.1.1
 
