- replace select() with poll() - implement swap usage checking
TODO: test all (this is initial checkin - needs to be checked on all platforms for both compilation and functionality)



git-svn-id: http://monit.googlecode.com/svn/trunk@145 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-                     CHANGES version 5.1.2
+                     CHANGES version 5.2
                                 
            This file summarizes changes made since 3.0
                                 
@@ -7,7 +7,14 @@
           https://savannah.nongnu.org/bugs/?group=monit
 
 
-Version 5.1.2
+Version 5.2
+
+NEW FEATURES AND FUNCTIONS:
+
+* Added support for system swap usage monitoring. Syntax is similar to
+  memory usage monitoring - example:
+      check system myserver
+          if swap usage > 25% then alert
 
 BUGFIXES:
 
